# imkitchen-next

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix  justfile
.claude/agents/: a11y-reviewer.md  domain-integrator.md  mockup-integrator.md  pagespeed-reviewer.md  seo-reviewer.md
.claude/commands/: a11y.md  domain.md  mockup.md  pagespeed.md  seo.md
.claude/skills/askama/: SKILL.md  creating-templates.md  filters.md  runtime.md
.claude/skills/conventional-commits/: SKILL.md
.claude/skills/ddd-cqrs-es/: SKILL.md  cqrs.md  ddd.md  event-sourcing.md  sagas.md
.claude/skills/evento/: SKILL.md  executors.md  macros.md  subscriptions.md
.claude/skills/pagespeed-insights/: SKILL.md
.claude/skills/sea-query/: SKILL.md
.claude/skills/seo/: SKILL.md
.claude/skills/sqlite-init/: SKILL.md
.claude/skills/sqlx-migrator/: SKILL.md
.claude/skills/tracing-logging/: SKILL.md
.claude/skills/twinspark/: SKILL.md
.claude/skills/web-accessibility/: SKILL.md
admin/server/: Cargo.toml
admin/server/src/: auth.rs  lib.rs
admin/server/templates/: login.html
admin/static/: app.css
admin/styles/: app.css
cli/: Cargo.toml
cli/src/: config.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  pool.rs
crates/db/src/migrations/: mod.rs
crates/recipes/: Cargo.toml
crates/recipes/src/: lib.rs  migrations.rs  recipe.rs  subscriptions.rs
crates/recipes/src/import/: mod.rs  parser.rs  saga.rs
crates/recipes/src/projection/: mod.rs  recipe_imports_view.rs  recipes_view.rs
crates/recipes/tests/: edit_delete.rs  import_saga.rs
web/server/: Cargo.toml
web/server/src/: assets.rs  auth.rs  lib.rs  recipes.rs  recipes_create.rs  recipes_edit.rs  recipes_import.rs
web/server/templates/: _mobile_nav.html  _side_rail.html  base.html  login.html
web/server/templates/recipes/: _card.html  _card_list.html  _detail_loading.html  _edit_awaiting.html  _edit_categorization.html  _edit_delete.html  _edit_description.html  _edit_ingredients.html  _edit_steps.html  _edit_tags.html  _edit_timing.html  _edit_title.html  _filter_chips.html  _fragment.html  _grid.html  _import_done.html  _import_failed.html  _import_preview.html  _import_upload.html  _import_waiting.html  _ing_row.html  _step_row.html  _view_toggle.html  create.html  detail.html  detail_loading.html  edit.html  edit_awaiting.html  import.html  index.html  not_found.html
web/static/: app.css
web/styles/: app.css
