[package]
name = "imkitchen-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "imkitchen"
path = "src/main.rs"

[dependencies]
imkitchen-web-server = { path = "../web/server" }
imkitchen-admin-server = { path = "../admin/server" }
imkitchen-db = { path = "../crates/db" }
axum.workspace = true
clap.workspace = true
config.workspace = true
serde.workspace = true
sqlx_migrator.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
