[package]
name = "imkitchen-admin-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
imkitchen-common = { path = "../../crates/common" }
axum.workspace = true
axum-extra.workspace = true
askama.workspace = true
evento.workspace = true
mime_guess.workspace = true
rust-embed.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
