[package]
name = "imkitchen-web-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
imkitchen-common = { path = "../../crates/common" }
imkitchen-recipes = { path = "../../crates/recipes" }
anyhow.workspace = true
axum = { workspace = true, features = ["multipart"] }
axum-extra.workspace = true
askama.workspace = true
evento.workspace = true
form_urlencoded.workspace = true
mime_guess.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
ulid.workspace = true
